[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/integration/MainConfigUI.gd" id="1_cfg"]

[node name="MainConfig" type="PanelContainer"]
visible = false
custom_minimum_size = Vector2(360, 320)
script = ExtResource("1_cfg")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 14
theme_override_constants/margin_top = 14
theme_override_constants/margin_right = 14
theme_override_constants/margin_bottom = 14

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "Configuraci√≥n"
horizontal_alignment = 1

[node name="FullscreenCheck" type="CheckBox" parent="Margin/VBox"]
layout_mode = 2
text = "Pantalla completa"

[node name="MasterRow" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="MasterLabel" type="Label" parent="Margin/VBox/MasterRow"]
layout_mode = 2
text = "Master"

[node name="MasterSlider" type="HSlider" parent="Margin/VBox/MasterRow"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.8

[node name="MusicRow" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="Margin/VBox/MusicRow"]
layout_mode = 2
text = "Music"

[node name="MusicSlider" type="HSlider" parent="Margin/VBox/MusicRow"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.7

[node name="SFXRow" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="SFXLabel" type="Label" parent="Margin/VBox/SFXRow"]
layout_mode = 2
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="Margin/VBox/SFXRow"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.85

[node name="ValuesLabel" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "Valores"

[node name="Buttons" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2
alignment = 1

[node name="ApplyButton" type="Button" parent="Margin/VBox/Buttons"]
layout_mode = 2
text = "Aplicar"

[node name="BackButton" type="Button" parent="Margin/VBox/Buttons"]
layout_mode = 2
text = "Volver"
